# sql-test

./: .bandit.yml  .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: testing.yaml
app/: main.py
app/api/: routes.py
app/db/: database.py
app/services/: sync.py  weather.py
app/utils/: viewer_count.py
