[tool.poetry]
name = "stream-video"
version = "0.1.0"
description = "SharedVideo backend with FastAPI"
authors = ["Team Winners"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
aiofiles = "^23.2.1"
sqlite-utils = "^3.36"
httpx = "^0.27.0"
python-multipart = "^0.0.20"
pymediainfo = "^7.0.1"
ruff = "^0.11.8"
flake8 = "^7.2.0"
bandit = "^1.8.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
bandit = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
